Create id, style second element

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,7 @@
     background-color: rgb(200, 100, 100);
     font-family: Verdana, 'DejaVu Sans', sans-serif;
 }
+#blueberry {
+    color: rgb(50, 50, 250);
+    font-size: 36px;
+}
