--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -6,3 +6,8 @@
 .pilates {
     background-color: rgb(250, 200, 100);
 }
+
+.yoga.pilates {
+    font-size: 28px;
+    font-family: Helvetica, 'Times New Roman', sans-serif;
+}
