--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,7 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
 }
 
 .logo {
@@ -9,11 +10,14 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  
+  
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  
 }
 
 a {
@@ -22,4 +26,7 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  padding: 5px;
+  margin: 10px;
+  
 }
